add krepkom
